[package]
name = "busse-845-edi-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.1"
nanoid = "0.4.0"
oxhttp = { version = "0.1.6", features = ["native-tls"] }
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
toml = "0.7.3"
